# mine

./: .gitignore  ConfigStore.hpp  ExchangeReaderAlphaVantage.h  Makefile  config.txt  dependencies.txt  main.cpp
src/: CMakeLists.txt  ConfigStore.cpp  ConfigStore.hpp  CurrencyPairEnum.hpp  ExchangeReaderBFX.cpp  ExchangeReaderBFX.hpp  ExchangeReaderBFXOrderbook.cpp  ExchangeReaderBFXOrderbook.hpp  dependencies.txt  main.cpp
